--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen"
-                 android:icon="@drawable/leaf">
+                 android:icon="@drawable/kittenhead">
 
         <activity android:name="MyActivity"
                   android:label="@string/app_name">
